--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
 
       <div class="field">
         <button id="signup-with-email" data-toggle="collapse" data-clickaction="exploding" class="btn btn-default btn-block custom-btn <%= 'hidden' if devise_errors? %>" data-target="#signup-email-form">
-        <%= fa_icon "envelope 2x", class: "left-postition" %>
+        <%= fa_icon "envelope 2x", class: "left-postition line-height-20" %>
         Sign Up with Email
         </button>
       </div>
