--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,6 +11,7 @@
             <% end %>
           <% end %>
         <% end %>
+        <%= oauth_email_error! %>
       </div>
 
       <div class="field">
