--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -42,7 +42,7 @@
 						</div>
 				<% elsif current_user.admin && current_user != @user %>
 					<%= link_to "REQUEST TO BOOK", new_conversation_path(speaker: @user), class: "btn btn-primary" %>
-					<%= link_to "Edit Profile", edit_user_path(@user), class: "btn btn-default" %>		
+					<%= link_to "Edit " + @user.full_name + " Profile", edit_user_path(@user), class: "btn btn-default" %>		
 				<% else %>
 					<%= link_to "Edit Profile", edit_user_path(current_user), class: "btn btn-default" %> 
 					<%= link_to "Change Password", edit_user_password_registration_path(current_user), class: "btn btn-default"  %>
