facebook share on talk

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -73,6 +73,12 @@ footer {
   padding: 0px;
 }
 
+.share-btn {
+  img {
+    height: 40px;
+  }  
+}
+
 .navbar-custom {
 	height: 60px;
   margin-bottom: 0px;
