--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,20 +2,24 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise.">
-    <meta property="og:image" content="http://i.imgur.com/yK5tMXm.jpg"/>
-    <meta property="og:description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops." />
-    <!-- Twitter Card -->
-    <meta name="twitter:title" content="Big Talker - A marketplace for onsite workshops, seminars, and guest speakers.">
-    <meta name="twitter:description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops.">
-    <meta name="twitter:image" content="http://i.imgur.com/yK5tMXm.jpg">
-    <!-- Google+ -->
-    <meta itemprop="name" content="Big Talker - A marketplace for onsite workshops, seminars, and guest speakers.">
-    <meta itemprop="description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise.">
-    <meta itemprop="image" content="http://i.imgur.com/yK5tMXm.jpg">
+    <% if content_for?(:head) %>
+      <%= yield(:head) %>
+    <% else %>
+      <!-- Facebook Card -->
+      <meta property="og:image" content="http://i.imgur.com/yK5tMXm.jpg"/>
+      <meta property="og:description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise." />
+      <!-- Twitter Card -->
+      <meta name="twitter:title" content="Big Talker - A marketplace for onsite workshops, seminars, and guest speakers">
+      <meta name="twitter:description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise.">
+      <meta name="twitter:image" content="http://i.imgur.com/yK5tMXm.jpg">
+      <!-- Google+ -->
+      <meta itemprop="name" content="Big Talker - A marketplace for onsite workshops, seminars, and guest speakers">
+      <meta itemprop="description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise.">
+      <meta itemprop="image" content="http://i.imgur.com/yK5tMXm.jpg">
+    <% end %>
 
     <%= favicon_link_tag asset_path('favicon.ico'), type:'image/png' %>
-    <title>BigTalker. Find onsite workshops, seminars and speakers</title>
+    <title>Big Talker - A marketplace for onsite workshops, seminars, and guest speakers</title>
     <%= render 'favicon' %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= csrf_meta_tags %>
@@ -118,5 +122,7 @@
   <%= javascript_include_tag 'application' %>
   <!-- geocomplete -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdEksj2K9pX7vBO8_jZgjFZk4jvWQQI0o&libraries=places"></script>
+  <!-- facebook -->
+  <script src="//connect.facebook.net/en_US/all.js"></script>
 </body>
 </html>
