--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -1,10 +1,12 @@
 <!-- For social sharing card -->
 <%= content_for :head do %>
+	<title><%= @workshop.title.titleize %></title>
 	<!-- Facebook Card -->
   <meta property="og:image" content="<%= @workshop.image.url(:medium) %>"/>
   <meta property="og:description" content="<%= truncate(@workshop.description, :length => 300, :separator => ' ') %>" />
   <!-- Twitter Card -->
-  <meta name="twitter:title" content="Big Talker - A marketplace for onsite workshops, seminars, and guest speakers">
+  <meta name="twitter:title" content="<%= @workshop.title.titleize %>">
+
   <meta name="twitter:description" content="<%= truncate(@workshop.description, :length => 300, :separator => ' ') %>">
   <meta name="twitter:image" content="<%= @workshop.image.url(:medium) %>">
   <!-- Google+ -->
@@ -32,6 +34,9 @@
 					<a href="javascript:void(0)" class="fb-share share-btn">
 					  <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
 					</a>
+					<a href="https://twitter.com/intent/tweet?text=<%= @workshop.title.titleize %>&url=<%= request.original_url %>&via=BigTalker_io" class="share-btn">
+		        <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
+			    </a>
 				</div>
 				<% if current_user == @workshop.user || current_user and current_user.admin %>
 					<%= link_to edit_workshop_path(@workshop), class: "btn btn-primary btn-edit" do %>
