add social sharing to homepage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -115,6 +115,10 @@
     </div>
   </div>
   <footer class="text-center">
+    <% if current_page?(root_path) %>
+      <%= render "social_share" %>
+      <br>
+    <% end %>
     <li class="footer-nav"><%= link_to "About Big Talker", about_path %></li>
     <li class="footer-nav"><a href ="/">Copyright 2016</a></li>
     <li class="footer-nav"><a href ="/">Terms and Conditions</a></li>
