--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -30,23 +30,9 @@
 				<strong>Expected Outcomes:</strong> <%= @workshop.expected_outcomes %><br>
 				<strong>Price:</strong> <%= number_to_currency(@workshop.price, precision: 0) %><br>
 				</h4>
-				<div class="social-share-wrapper">
-					<a href="javascript:void(0)" class="fb-share share-btn">
-					  <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
-					</a>
-					<a href="https://twitter.com/intent/tweet?text=<%= @workshop.title.titleize %>&url=<%= request.original_url %>&via=BigTalker_io" class="share-btn">
-		        <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
-			    </a>
-			    <a href="javascript:void(0)" target="_blank" class="google-share share-btn" data-name="google">
-		        <img src="https://simplesharebuttons.com/images/somacro/google.png" alt="Google" />
-			    </a>
-			    <a href="javascript:void(0)" target="_blank" class="linkedIn-share share-btn" data-name="linkedIn">
-		        <img src="https://simplesharebuttons.com/images/somacro/linkedin.png" alt="LinkedIn" />
-			    </a>
-			    <a href="mailto:?Subject=BigTalker.io - <%= @workshop.title.titleize %>&Body=Thought%20you%20would%20have%20been%20interested%20in%20this%20talk,%20<%= uri_encode(@workshop.title.titleize) %>.%0A<%= request.original_url %>" class="share-btn">
-		        <img src="https://simplesharebuttons.com/images/somacro/email.png" alt="Email" />
-			    </a>
-				</div>
+
+				<%= render "sites/social_share" %>
+
 				<% if current_user == @workshop.user || current_user and current_user.admin %>
 					<%= link_to edit_workshop_path(@workshop), class: "btn btn-primary btn-edit" do %>
 						<%= fa_icon "pencil-square-o " %>
@@ -136,7 +122,3 @@
 		</div>
 	</div>
 </div>
-
-<%= javascript_tag do %>
-	share_url = "<%= request.original_url %>";
-<% end %>
