--- a/app/views/new_user_mailer/new_user_message.html.erb
+++ b/app/views/new_user_mailer/new_user_message.html.erb
@@ -5,6 +5,8 @@
    </head>
    
    <body>
-   		<p>A new user has created an account for BigTalker</p>
+   		<p>A new user has created an account for BigTalker:</p><br>
+   		<p>Name: <%= @user.full_name %></p><br>
+   		<p>Email: <%= @user.email %></p>
    </body>
 </html>
