adds $ addon to workshop form to prevent users from inputting $ with price

--- a/app/views/workshops/_workshop_form.html.erb
+++ b/app/views/workshops/_workshop_form.html.erb
@@ -43,7 +43,10 @@
       Price<span class="required-label"></span>
     <% end %>
     <br>
+    <div class="input-group">
+    <span class="input-group-addon">$</span>
     <%= f.text_field :price, :class => "form-control" %>
+    </div>
  </div>
   <div class="field">
     <%= f.label :image do %>
