--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -517,11 +517,14 @@ ul.dropdown-menu{
       }
   }
 
-  .field input {
+  .field input, .input-group-addon {
       height: 40px;
       border:none;
       font-size: 18px;
 
+  }
+  .input-group-addon {
+    background-color: #fff;
   }
   textarea  {
     border:none;
