--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -77,7 +77,10 @@
 						<div class="col-xs-12">
 							<div class="field form-group">
 						    <%= f.label :budget %><br>
+						    <div class="input-group">
+						    <span class="input-group-addon">$</span>
 						    <%= f.text_field :budget, class: "form-control" %>
+						    </div>
 						  </div>
 						</div>
 					</div>
