--- a/app/views/sites/_search_bar.html.erb
+++ b/app/views/sites/_search_bar.html.erb
@@ -4,12 +4,12 @@
 			<div class="col-sm-8 col-sm-offset-2">
 				<%= form_tag workshops_path, method: :get, class: "search-bar-form" do %>
 					<div class="row search-bar">
-						<div class="col-sm-10 search-topic-wrapper">
+						<div class="col-sm-10 col-xs-8 search-topic-wrapper">
 							<div class="form-group">
 								<%= select_tag :topic, options_from_collection_for_select(Topic.all, :name, :titleize_name), prompt: "Choose a topic", class: "selectpicker form-group", hidden: true %>
 							</div>	
 						</div>
-						<div class="col-sm-2 search-btn-wrapper">
+						<div class="col-sm-2 col-xs-2 search-btn-wrapper">
 							<div class="form-group">
 								<button class="btn btn-primary form-control btn-search" type="submit">
 		            <p>SEARCH</p>
