adds media query to workshop view btn in index

--- a/app/assets/stylesheets/workshops.scss
+++ b/app/assets/stylesheets/workshops.scss
@@ -17,6 +17,15 @@
 		margin-right: 15px;
 	}
 }
+.view-btn {
+	margin-left: 91%;
+}
+@media (max-width: 991px) {
+	.view-btn{
+		margin-left: 41%;
+		margin-right: 41%;
+	}
+}
 // end workshops index
 
 // new workshop
