--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -21,8 +21,8 @@
 							<p>Speaker:<%= link_to workshop.user.full_name.titleize, user_path(workshop.user), class: "speaker-name-link" %></p>
 						</span>
 					</div>
-					<div class="text-right">
-						<%= link_to "View", workshop_path(workshop), class: "btn btn-primary" %>
+					<div>
+						<%= link_to "View", workshop_path(workshop), class: "view-btn btn btn-primary" %>
 					</div>
 				</div>
 			</div>
