centers view btn in workshop index

--- a/app/assets/stylesheets/workshops.scss
+++ b/app/assets/stylesheets/workshops.scss
@@ -22,8 +22,9 @@
 }
 @media (max-width: 991px) {
 	.view-btn{
-		margin-left: 41%;
-		margin-right: 41%;
+		width: 20%;
+		margin-left: 40%;
+		margin-right: 40%;
 	}
 }
 // end workshops index
