--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -110,8 +110,10 @@ footer {
   }
   .navbar-logo img {
     margin: 0 0 0 15px;
-    margin-top: 3px;
-    height: 45px;
+    margin-top: -3px;
+    padding-bottom: 5px;
+    height: 65px;
+    width: auto;
   }
   // overrided mobile navbar styling
   .navbar-header button.navbar-toggle {
