--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -60,7 +60,7 @@
 			<% @workshops.each do |workshop| %>
 		<div class="col-md-12 thumbnail">
 				<div class="col-md-4">
-					<%= image_tag workshop.image.url(:medium), class: "img-responsive workshop-img" %>
+					<%= link_to "#{image_tag(workshop.image.url(:medium))}".html_safe, workshop_path(workshop), class: "img-responsive workshop-img" %>
 				</div>
 				<div class="col-md-8">
 					<h2><%= link_to workshop.title.titleize, workshop_path(workshop), class: "workshop-title-link" %></h2>
@@ -68,11 +68,6 @@
 						Topic: <%= workshop.topic.name.titleize %>
 					</h4>
 					<p><%= simple_format(truncate(workshop.description, length: 200, seprator: ' ')) %></p>
-					<% if !current_user or current_user != @user %>
-						<div class="text-right">
-							<%= link_to "View", workshop_path(workshop), class: "btn btn-primary" %>
-						</div>
-					<% end %>
 				</div>
 		</div>
 				<% end %>
