--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -278,9 +278,8 @@ footer {
 
 }
 .thumbnail.featured-workshop {
-    width: 100%;
-    height: 100%;
-    padding: 3%;
+  min-height: 490px;
+  padding: 3%;
 }
 
  .thumbnail>img, .thumbnail a>img {
