removes watermark from logo

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -109,9 +109,10 @@ footer {
     margin: 0px;
   }
   .navbar-logo img {
-    margin: 0 0 0 15px;
+    margin: 0 0 0 20px;
     margin-top: -3px;
-    padding-bottom: 5px;
+    padding-top: 6px;
+    padding-bottom: 10px;
     height: 65px;
     width: auto;
   }
