centers alert messages/notifications

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,7 +81,7 @@
       </div>
     </nav>
     <!-- Devise Flash MSG -->
-    <div class="notice-error-msg">
+    <div class="notice-error-msg text-center">
       <% if notice.present? %>
       <div class="alert devise-msg alert-info %>">
         <a aria-label="close" class="close" data-dismiss="alert" href="#">&times;</a>
