adds location input in contact us form

--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -55,7 +55,7 @@
 						<div class="col-sm-6">
 							<div class="field form-group">
 						    <%= f.label :location %><br>
-						    <%= f.text_field :location, class: "form-control" %>
+						    <%= f.text_field :location, class: "form-control location-input" %>
 						  </div>
 						</div>
 					</div>
