adds meta tag with description for searches

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,16 +6,17 @@
       <%= yield(:head) %>
     <% else %>
       <title>BigTalker - A marketplace for onsite workshops, seminars, and guest speakers</title>
+      <meta name="description" content="BigTalker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise.">
       <!-- Facebook Card -->
       <meta property="og:image" content="http://i.imgur.com/yK5tMXm.jpg"/>
-      <meta property="og:description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise." />
+      <meta property="og:description" content="BigTalker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise." />
       <!-- Twitter Card -->
-      <meta name="twitter:title" content="Big Talker - A marketplace for onsite workshops, seminars, and guest speakers">
-      <meta name="twitter:description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise.">
+      <meta name="twitter:title" content="BigTalker - A marketplace for onsite workshops, seminars, and guest speakers">
+      <meta name="twitter:description" content="BigTalker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise.">
       <meta name="twitter:image" content="http://i.imgur.com/yK5tMXm.jpg">
       <!-- Google+ -->
-      <meta itemprop="name" content="Big Talker - A marketplace for onsite workshops, seminars, and guest speakers">
-      <meta itemprop="description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise.">
+      <meta itemprop="name" content="BigTalker - A marketplace for onsite workshops, seminars, and guest speakers">
+      <meta itemprop="description" content="BigTalker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise.">
       <meta itemprop="image" content="http://i.imgur.com/yK5tMXm.jpg">
     <% end %>
     <meta name="twitter:card" content="summary_large_image">
@@ -120,7 +121,7 @@
       <%= render "social_share" %>
       <br>
     <% end %>
-    <li class="footer-nav"><%= link_to "About Big Talker", about_path %></li>
+    <li class="footer-nav"><%= link_to "About BigTalker", about_path %></li>
     <li class="footer-nav"><a href ="/">Copyright 2016</a></li>
     <li class="footer-nav"><a href ="/">Terms and Conditions</a></li>
     <li class="footer-nav"><a href ="http://www.twitter.com/bigtalker_io" target="_blank"><%= fa_icon "twitter 2x" %></a></li>
