--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <% else %>
       <title>BigTalker - A marketplace for onsite workshops, seminars, and guest speakers</title>
       <meta name="description" content="BigTalker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise.">
-      <meta name="keywords" content="BigTalker,Speaker,Speakers,Motivational Speaker,Talk,Workshop,Team Building,Onsite,Presentation">
+      <meta name="keywords" content="BigTalker,Speaker,Speakers,Motivational Speaker,Talk,Workshop,Team Building,Onsite,Presentation,Seminar">
       <!-- Facebook Card -->
       <meta property="og:image" content="http://i.imgur.com/yK5tMXm.jpg"/>
       <meta property="og:description" content="BigTalker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise." />
