--- a/app/views/message_mailer/_request_speaker_email.html.erb
+++ b/app/views/message_mailer/_request_speaker_email.html.erb
@@ -4,6 +4,8 @@
 <p>Location: <%= @msg.location %></p>
 <p>Number of participants: <%= @msg.number_participants %></p>
 <p>Budget: $<%= @msg.budget %></p>
-<p>Audience: <%= @msg.audience %></p>
-<p>Potential Date: <%= @msg.date %></p>
-<p>Additional Message: <%= @msg.content %></p>
+<p>Audience: <%= @msg.audience.present? ? "#{@msg.audience}" : "N/A" %></p>
+<p>Potential Date: <%= @msg.date.present? ? "#{@msg.audience}" : "N/A" %></p>
+<p>Additional Message:<br>
+    <%= @msg.content %>    
+</p>
