style tabs and tab content

--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -21,7 +21,7 @@
 
 	<div class="row contact-form-wrap zero-margin">
 		<div class="col-md-6 col-md-offset-3">
-			<ul class="nav nav-pills">
+			<ul class="nav nav-tabs contact-tabs">
 		    <li class="active"><a data-toggle="pill" href="#contact-form">Contact Us</a></li>
 		    <li><a data-toggle="pill" href="#request-speaker-form">Request Speaker</a></li>
 		  </ul>
