--- a/app/assets/stylesheets/sites.scss
+++ b/app/assets/stylesheets/sites.scss
@@ -41,3 +41,29 @@ button#site-workshops-filter {
 		margin-top: 10px;
 	}
 }
+ul.contact-tabs {
+	li {
+		width: 50%;
+		text-align: center;
+		a {
+			font-size: 22px !important;
+			padding: 10px 0;
+			color: #fff;
+		}
+	}
+	li.active > a, li.active > a:hover, li.active > a:focus {
+		background-color: #3f4652;
+		color: #fff;
+    margin: 0px;
+	}
+}
+div.tab-content {
+	border-bottom: 1px solid #ddd;
+	border-left: 1px solid #ddd;
+	border-right: 1px solid #ddd;
+}
+@media (max-width:405px) {
+	ul.contact-tabs  li  a {
+		font-size: 18px !important;
+	}
+}
