--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -2,7 +2,7 @@
 	<section id="hero-image">
 		<div class="jumbotron">
 			<h1>Inspire Your Team</h1>
-			<h2>Book a game-changing onsite trainer for your organization</h2>
+			<h2>Book a game-changing onsite workshop for your organization</h2>
 			<a class="btn btn-primary btn-lg" id="btn-signup" href="/workshops">SEE ALL TALKS</a>
 		</div>
 	</section>
